--- a/0222_zero_matrix_nd.ipynb
+++ b/0222_zero_matrix_nd.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,22 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1, 1, 1, 1],\n",
-       "        [0, 1, 1, 1],\n",
+       "array([[[1, 1, 1, 0],\n",
+       "        [1, 1, 0, 1],\n",
        "        [1, 1, 0, 1]],\n",
        "\n",
-       "       [[1, 1, 0, 1],\n",
+       "       [[1, 1, 0, 0],\n",
        "        [1, 1, 1, 1],\n",
        "        [1, 1, 1, 1]]])"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,17 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[1, 0, 1, 1], [1, 1, 1, 1], [1, 0, 1, 1]],\n",
-       " [[1, 1, 1, 1], [1, 1, 1, 1], [1, 1, 1, 1]]]"
+       "[[[1, 1, 1, 1], [1, 1, 1, 1], [1, 1, 1, 0]],\n",
+       " [[1, 1, 1, 1], [0, 1, 1, 1], [1, 1, 1, 1]]]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,14 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "824 µs ± 15.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "813 µs ± 31.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -138,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "59 µs ± 1.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "55.9 µs ± 1.71 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finding Zero Coordinates"
+    "### Finding Shape, Dimensions, Zero Coordinates"
    ]
   },
   {
@@ -177,21 +177,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (2, 3, 4)\n",
+      "Dimensions: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape:\", test_np.shape)\n",
+    "print(\"Dimensions:\", len(test_np.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0, 0, 1]), array([1, 2, 0]), array([0, 2, 2]))"
+       "(array([0, 0, 0, 1, 1]), array([0, 1, 2, 0, 0]), array([3, 2, 2, 2, 3]))"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# find all zeros, outputs coords by dimension\n",
     "np.where(test_np == 0)"
    ]
   },
@@ -224,36 +244,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zero_coords = []\n",
+    "def detect_shape(arr_in):\n",
+    "    \"\"\"Return shape of N-dim array\"\"\"\n",
+    "    \n",
+    "    test = arr_in\n",
+    "    shape = [len(test)]\n",
+    "    while True:\n",
+    "        test = test[0]\n",
+    "        try:\n",
+    "            shape.append(len(test))\n",
+    "        except TypeError:\n",
+    "            break\n",
+    "    return tuple(shape)\n",
     "\n",
-    "def get_coords(arr_in, coord=[]):\n",
+    "\n",
+    "def detect_shape_rec(arr_in, shape=[]):\n",
+    "    \"\"\"Recursive method to detect shape of N-dim array\"\"\"\n",
+    "    \n",
+    "    if not isinstance(arr_in, list):\n",
+    "        return shape\n",
+    "    else:\n",
+    "        shape.append(len(arr_in))\n",
+    "        return detect_shape_rec(arr_in[0], shape)\n",
+    "\n",
+    "\n",
+    "def get_coords(arr_in, coord=[], zero_coords=[]):\n",
+    "    \"\"\"Returns coordinates of all zeros from N-dim array\"\"\"\n",
+    "    \n",
     "    # will return false if 1 or list\n",
     "    if arr_in == 0:\n",
-    "        print(coord)\n",
-    "        zero_coords.append(coord)\n",
+    "        zero_coords.append(tuple(coord))\n",
+    "        return zero_coords\n",
     "    if isinstance(arr_in, list):\n",
     "        for ix, sub in enumerate(arr_in):\n",
     "            next_coord = coord + [ix]\n",
-    "            get_coords(sub, next_coord)"
+    "            get_coords(sub, next_coord)\n",
+    "        return zero_coords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[[0, 1, 1, 1], [1, 1, 0, 1], [1, 1, 0, 1]],\n",
-       " [[0, 1, 1, 0], [1, 1, 1, 1], [1, 1, 1, 1]]]"
+       "[[[1, 1, 1, 1], [0, 1, 1, 1], [0, 1, 1, 1]],\n",
+       " [[1, 1, 1, 0], [1, 1, 0, 0], [0, 1, 1, 1]]]"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,23 +310,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1, 0), (0, 2, 0), (1, 0, 3), (1, 1, 2), (1, 1, 3), (1, 2, 0)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_coords(test_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3, 4)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "detect_shape(test_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "detect_shape_rec(test_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0]\n",
-      "[0, 1, 2]\n",
-      "[0, 2, 2]\n",
-      "[1, 0, 0]\n",
-      "[1, 0, 3]\n"
+      "Dimensions: 3\n"
      ]
     }
    ],
    "source": [
-    "get_coords(test_arr)"
+    "print(\"Dimensions:\", len(detect_shape(test_arr)))"
    ]
   },
   {
