minor edit to airplane seats

--- a/0228_airplane_seats_monte_carlo.ipynb
+++ b/0228_airplane_seats_monte_carlo.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "An airplane has 20 seats numbered from 1 to 20, and each of 20 passengers has an assigned seat. Everyone queues up in a civil fashion except for one knucklehead, who pushes his way to the front of the line. Then, without even looking at his seat assignment, he boards and sits wherever he feels like sitting. Then the others board. If their assigned seats are open, they sit there; otherwise, they choose an open seat at random. \n",
     "\n",
-    "What is the probability that the 12th person's assigned seat is open?"
+    "What is the probability that the nth person's assigned seat is open?"
    ]
   },
   {
