--- a/0306_primes_and_prime_factors.ipynb
+++ b/0306_primes_and_prime_factors.ipynb
@@ -17,11 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import sqrt\n",
     "import numpy as np"
    ]
   },
@@ -61,7 +60,7 @@
     "    numbers = list(range(3, limit+1, 2))\n",
     "    \n",
     "    ix = 0\n",
-    "    root_limit = sqrt(limit)\n",
+    "    root_limit = np.sqrt(limit)\n",
     "    while numbers[ix] <= root_limit:\n",
     "        numbers = numbers[:ix+1] + [n for n in numbers[ix+1:] if n % numbers[ix] != 0]\n",
     "        ix += 1\n",
@@ -109,7 +108,7 @@
     "    numbers = list(range(3, limit+1, 2))\n",
     "    \n",
     "    ix = 0\n",
-    "    root_limit = sqrt(limit)\n",
+    "    root_limit = np.sqrt(limit)\n",
     "    while numbers[ix] <= root_limit:\n",
     "        for n in numbers[ix+1:]:\n",
     "            if n % numbers[ix] == 0:\n",
@@ -657,12 +656,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Prime Number Theorem suggests that π(N) ~ N / ln(N), where π(N) is the prime-counting function, which returns the number of primes less than or equal to N. It follows, then, that the ratio of primes to all numbers could be expressed as π(N) / N ~ 1 / ln(N)."
+    "The Prime Number Theorem suggests that π(N) ~ N / ln(N), where π(N) is the prime-counting function, which returns the number of primes less than or equal to N. It follows, then, that the ratio of primes to all numbers could be expressed as π(N) / N ~ 1 / ln(N).\n",
+    "\n",
+    "Regarding the complexity of the second two methods above, this would suggest O(N / ln(N))."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,6 +722,7 @@
     }
    ],
    "source": [
+    "# number of primes up to 1M\n",
     "p_mil.shape"
    ]
   },
@@ -779,7 +781,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Regarding the complexity of the second two methods above, this would suggest O(N / ln(N)).\n",
+    "One can see that the density and count curves smooth out as N increases, in greater and greater approximation of the theoretical curves.\n",
     "\n",
     "The PNT also suggests that, despite the apparent divergence of π(N) and N / ln(N) as seen above, the limit of π(N) / (N / ln(N)) as N -> ∞ is 1."
    ]
