--- a/0306_primes_and_prime_factors.ipynb
+++ b/0306_primes_and_prime_factors.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -146,24 +146,29 @@
      "text": [
       "\n",
       "n = 10\n",
-      "Method 1: 2.52 µs ± 258 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Method 2: 2.03 µs ± 73.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n",
+      "Methods agree: True\n",
+      "Method 1: 4.78 µs ± 394 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "Method 2: 4.12 µs ± 455 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
       "\n",
       "n = 100\n",
-      "Method 1: 17.1 µs ± 546 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "Method 2: 24.4 µs ± 2.1 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "Methods agree: True\n",
+      "Method 1: 20.7 µs ± 1.92 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "Method 2: 26.1 µs ± 2.22 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
       "\n",
       "n = 1000\n",
-      "Method 1: 286 µs ± 12.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "Method 2: 1.13 ms ± 66.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "Methods agree: True\n",
+      "Method 1: 304 µs ± 11 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "Method 2: 1.06 ms ± 23.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
       "\n",
       "n = 10000\n",
-      "Method 1: 4.86 ms ± 148 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "Method 2: 86.9 ms ± 3.18 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "Methods agree: True\n",
+      "Method 1: 4.77 ms ± 184 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "Method 2: 85.3 ms ± 1.91 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
       "\n",
       "n = 100000\n",
-      "Method 1: 113 ms ± 13.7 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "Method 2: 9.21 s ± 490 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "Methods agree: True\n",
+      "Method 1: 99.3 ms ± 2.51 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "Method 2: 9.28 s ± 833 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -171,6 +176,7 @@
     "for n in range(1,6):\n",
     "    n = 10 ** n\n",
     "    print(\"\\nn =\", n)\n",
+    "    print(\"Methods agree:\", gen_primes(n) == gen_primes2(n))\n",
     "    print(\"Method 1:\", end=\" \")\n",
     "    %timeit gen_primes(n)\n",
     "    print(\"Method 2:\", end=\" \")\n",
@@ -383,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, this method works well enough, but checking if `n` is a member of `primes` each time through the while-loop is an O(n) operation, since `primes` is a tuple. It would speed things up significantly if `primes` were a set, but we need to reference elements by index in ascending order, so we'd have to have a `primes` set and a `primes` tuple. Fine if small, but not ideal if our list of primes takes up a significant chunk of memory. So why check for membership in `primes` at all?"
+    "Now, this method works well enough, but checking if `n` is a member of `primes` each time through the while-loop is an O(n) operation, since `primes` is passed as a list or tuple. It would speed things up significantly if `primes` were a set, but we need to reference elements by index in ascending order, so we'd have to have a `primes` set and a `primes` list/tuple. Fine if small, but not ideal if our list of primes takes up a significant chunk of memory. So why check for membership in `primes` at all?"
    ]
   },
   {
@@ -444,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another idea, which may well be more efficient than the last:"
+    "Another idea, which I suspect will be more efficient than the last:"
    ]
   },
   {
